[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwatlib"
dynamic = ["version"]
description = "A practical penetration testing wrapper library for recon, web, exploitation, and post-exploitation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "HwatSauce", email = "muhammadabdullah8040@gmail.com" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"requests>=2.31,<3",
	"beautifulsoup4>=4.12,<5",
	"paramiko>=3.4,<4",
	"python-nmap>=0.7.1,<0.8",
	"defusedxml>=0.7,<0.8",
	"tomli>=2.0.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
	"pytest>=9,<10",
	"pytest-cov>=5,<7",
	"ruff>=0.6,<1",
	"mypy>=1.11,<2",
	"types-requests>=2.32,<3",
	"bandit[toml]>=1.7,<2",
	"pip-audit>=2.7,<3",
	"pre-commit>=3,<5",
	"pdoc>=14,<16",
]
async = ["aiohttp>=3.9,<4"]
dns = ["dnspython>=2.6,<3"]

[project.scripts]
hwat = "hwatlib.cli:main"
hwat-recon = "hwatlib.recon:main"
hwat-web = "hwatlib.web:main"
hwat-exploit = "hwatlib.exploit:main"
hwat-privesc = "hwatlib.privesc:main"
hwat-postex = "hwatlib.postex:main"

[project.urls]
Homepage = "https://github.com/iabdullah215/hwatlib"

[tool.setuptools.dynamic]
version = { attr = "hwatlib.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["hwatlib*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
hwatlib = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["hwatlib", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hwatlib"]

[tool.mypy]
python_version = "3.11"
files = ["hwatlib"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["hwatlib"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
